deployment/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: sample-app
    app.kubernetes.io/instance: sample-app
    app: sample-app
  name: sample-app
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: sample-app
  template:
    metadata:
      labels:
        deployment: sample-app
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/default/sample-app:latest
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        imagePullPolicy: IfNotPresent
        name: sample-app
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
          - mountPath: /etc/nginx/conf.d/
            name: nginx-config-volume
      volumes:
        - name: nginx-config-volume
          configMap:
            name: nginx-config
