deployment/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: sample-app
    app.kubernetes.io/component: sample-app
    app.kubernetes.io/instance: sample-app
  name: sample-app
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: sample-app
    weight: 100
  wildcardPolicy: None
